# family_robot_ws

./: README.md  kill_all_ros2_nodes.sh  readme_famlayrobot.txt  start_all_nodes.sh
install/: local_setup.sh  setup.sh
install/family_robot_head/lib/family_robot_head/: head_node
install/family_robot_head/share/family_robot_head/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/family_robot_head/share/family_robot_head/cmake/: family_robot_headConfig.cmake
install/learn_compose/include/learn_compose/learn_compose/: motion_detector.hpp
install/learn_compose/lib/learn_compose/: listener_node  motion_detector_node  talker_node
install/learn_compose/share/ament_index/resource_index/rclcpp_components/: learn_compose
install/learn_compose/share/learn_compose/: package.ps1  package.sh
install/stock_monitor_node/lib/stock_monitor_node/: stock_monitor
install/stock_monitor_node/share/stock_monitor_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/web_wenxun_sender_node/lib/web_wenxun_sender_node/: web_wenxun_sender
install/web_wenxun_sender_node/share/web_wenxun_sender_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/wechat_interfaces/include/wechat_interfaces/wechat_interfaces/msg/: rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/wechat_interfaces/include/wechat_interfaces/wechat_interfaces/srv/: we_chat_message.h  we_chat_message.hpp
install/wechat_interfaces/include/wechat_interfaces/wechat_interfaces/srv/detail/: we_chat_message__functions.h  we_chat_message__rosidl_typesupport_fastrtps_c.h  we_chat_message__rosidl_typesupport_introspection_c.h  we_chat_message__rosidl_typesupport_introspection_cpp.hpp  we_chat_message__struct.hpp  we_chat_message__traits.hpp  we_chat_message__type_support.c  we_chat_message__type_support.h  we_chat_message__type_support.hpp
install/wechat_interfaces/local/lib/python3.10/dist-packages/wechat_interfaces/: _wechat_interfaces_s.ep.rosidl_typesupport_introspection_c.c
install/wechat_interfaces/local/lib/python3.10/dist-packages/wechat_interfaces-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt
install/wechat_interfaces/share/wechat_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/wechat_interfaces/share/wechat_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_wechat_interfaces__rosidl_generator_cExport.cmake  export_wechat_interfaces__rosidl_generator_cppExport.cmake  export_wechat_interfaces__rosidl_generator_pyExport.cmake  export_wechat_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_wechat_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake-extras.cmake  wechat_interfacesConfig.cmake  wechat_interfaces__rosidl_typesupport_cppExport.cmake  wechat_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  wechat_interfaces__rosidl_typesupport_introspection_cExport.cmake  wechat_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/yolov8_ros2/lib/yolov8_ros2/: image_publisher  yolov8_ros2
install/yolov8_ros2/share/yolov8_ros2/: package.sh
log/: latest_build
src/family_robot_head/: CMakeLists.txt
src/family_robot_head/include/family_robot_head/: head_node.hpp  head_node（复件）.hpp
src/family_robot_head/src/: head_node.cpp  head_node（复件）.cpp
src/laofu_message/: readme.txt
src/laofu_message/stock_monitor_node/: package.xml  setup.cfg  setup.py
src/laofu_message/stock_monitor_node/stock_monitor_node/: stock_monitor.py
src/laofu_message/web_wenxun_sender_node/: package.xml  setup.cfg  setup.py
src/laofu_message/wechat_interfaces/: CMakeLists.txt  package.xml
src/video_face_move/: readme.txt
src/video_face_move/learn_compose/: CMakeLists.txt  fastdds_shm.xml
src/video_face_move/learn_compose/include/learn_compose/: listener.hpp  talker.hpp
src/video_face_move/learn_compose/src/: listener.cpp  motion_detector.cpp  talker.cpp
src/yolov8_ros2/: package.xml  setup.py
